--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,30 @@
-.link   {
-    list-style: none;
-    display: inline; 
-    background-color: #FFC5B8;
-    
+body {
+  text-align: justify;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: grey;
 }
 
-.tituloPrincipal   {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-align: left;
-    color: red;
-    font-weight: lighter;
-    margin-left: 50px;
+header .link {
+  list-style: none;
+  display: inline;
+  color: white;
+}
+header h1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-align: left;
+  color: red;
+  font-weight: lighter;
+  margin-left: 50px;
 }
 
-.botones    {
-    text-align: right;
+main img {
+  background-color: black;
+}
+main .jugaYa {
+  text-align: center;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: bolder;
+  font-size: 400%;
 }
 
-
-.queEs  {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-left: 130px;
-}
-
-.clases {
-    display: inline;
-    color: white;
-}
-
-
-.card   {
-    box-shadow: 0 4px 8px 0 rgba (0,0,0,0.2);
-    transition: 0.3s;
-    display: inline;
-}
-
-.container  {
-    padding: 2px 16px;
-}
-
-
-img {
-    background-color: black;
-}
-
-.textoIndex {
-    text-align: justify;
-}
-
-.galeriaImagen  {
-    height: auto;
-    width: 70%;
-    margin: auto;
-}
-
-.jugaYa {
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bolder;
-    color: grey;
-    font-size: 400%;
-}
-
-body  {
-    background: linear-gradient(to bottom, #FFF8EA, #9E7676);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-}
+/*# sourceMappingURL=style.css.map */
