--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,7 @@ header  {
         color: red;
         font-weight: lighter;
         margin-left: 50px;
+
     }
 }
 
@@ -33,5 +34,10 @@ main    {
         font-family: $letra-importante;
         font-weight: bolder;
         font-size: 400%;
+    }
+
+    .textoIndex {
+        background-color: white;
+        border-radius: 10px;
     }
 }
