--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header h1 {
   color: red;
   font-weight: lighter;
   margin-left: 50px;
+  font-size: 50px;
 }
 
 main img {
@@ -25,6 +26,9 @@ main .jugaYa {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: bolder;
   font-size: 400%;
+}
+main h2 {
+  font-size: 30px;
 }
 main .textoIndex {
   background-color: white;
