--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header .nav {
-  --bs-nav-link-color: white;
+  --bs-nav-link-color: $color;
   --bs-nav-link-hover-color: grey;
 }
 header h1 {
@@ -20,18 +20,34 @@ header h1 {
 main img {
   background-color: black;
 }
+main h2 {
+  font-size: 30px;
+}
 main .jugaYa {
   text-align: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: bolder;
   font-size: 400%;
 }
-main h2 {
-  font-size: 30px;
-}
 main .textoIndex {
   background-color: white;
   border-radius: 10px;
+}
+main .video {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+main .videoResponsive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
