--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,3 +63,18 @@ main    {
         border: none;
     }
 }
+
+footer {
+    background-image: url(../img/valorantFondo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    color: $color;
+
+    .redes {
+        display: inline;
+        text-decoration: none;
+
+    }
+}
