--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,4 @@
 $letra-importante: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-$color: white;
 
 
 body    {
@@ -10,7 +9,7 @@ body    {
 
 header  {
     .nav {
-        --bs-nav-link-color: $color;
+        --bs-nav-link-color: white;
         --bs-nav-link-hover-color: grey;
     }
 
@@ -41,7 +40,7 @@ main    {
     }
 
     .textoIndex {
-        background-color: $color;
+        background-color: white;
         border-radius: 10px;
     }
 
@@ -70,7 +69,7 @@ footer {
     background-position: center;
     background-size: cover;
     height: 500px;
-    color: $color;
+    color: white;
 
     .redes {
         display: inline;
