--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,8 +3,8 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: $tam-px * 10;
-    color: white;
+    height: $tam-px * 5;
+    color: $color-bl;
 
     .redes {
         display: inline;
