--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,6 @@
 header  {
     .nav {
-        --bs-nav-link-color: white;
+        --bs-nav-link-color: $color-bl;
         --bs-nav-link-hover-color: grey;
     }
 
