--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,3 +2,7 @@
 $letra-importante: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 $tam-px: 50px;
+
+$color-bl: white;
+
+$color-ng: black;
