--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,5 +6,6 @@
 body    {
     text-align: justify;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: grey;
+    background-color: #0f1821;
+    color: $color-bl;
 }
