--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,3 +9,15 @@ body    {
     background-color: #0f1821;
     color: $color-bl;
 }
+
+h4 {
+    text-align: $centro;
+}
+
+h5 {
+    text-align: $centro;
+}
+
+h6 {
+    text-align: $centro;
+}
