--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,5 @@
-@import "variables";
-@import "header";
-@import "main";
-@import "footer";
+@import "variables", "header", "main", "footer";
+
 
 body    {
     text-align: justify;
