uso de @imports

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -13,7 +13,7 @@ main    {
     }
 
     .jugaYa {
-        text-align: center;
+        text-align: $centro;
         font-family: $letra-importante;
         font-weight: bolder;
         font-size: 400%;
