--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,9 +6,15 @@ footer {
     height: $tam-px * 5;
     color: $color-bl;
 
+    h4 {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
 
     .redes li {
         display: inline;
+        
     }
 
     .facebook   {
