--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@ header  {
     }
 
     h1 {
-        font-family: $letra-importante;
+        font-family: valorant;
         text-align: left;
         color: red;
         font-weight: lighter;
