--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,10 @@
 @import "variables", "header", "main", "footer";
 
+@font-face {
+    font-family: valorant;
+    src: url(../font/Valorant\ Font.ttf);
+}
+
 
 body    {
     text-align: justify;
