--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,7 +4,7 @@ main    {
     } 
 
     h2 {
-        font-size: $tam-px - 10px;
+        font-size: $tam-px;
     }
 
     .queEs {
@@ -16,7 +16,7 @@ main    {
         text-align: $centro;
         font-family: $letra-importante;
         font-weight: bolder;
-        font-size: 400%;
+        font-size: 600%;
     }
 
     .textoIndex {
@@ -30,6 +30,7 @@ main    {
         width: 100%;
         overflow: hidden;
         padding-top: 56.25%;
+        margin-top: 4%;
     }
 
     .videoResponsive {
