--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,5 @@
 //Mis variables
-$letra-importante: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+$letra-importante: valorant;
 
 $tam-px: 50px;
 
