--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -38,7 +38,7 @@ footer {
     }
 
     .instagram:hover {
-        background-color: #E1306C;
+        background-color: #F77737;
         border-radius: 100%;
     }
 
