--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -11,5 +11,6 @@ header  {
         font-weight: lighter;
         margin-left: $tam-px;
         font-size: $tam-px;
+        margin-top: 20px;
     }
 }
