--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import "variables", "header", "main", "footer", "fonts";
+@import "variables", "header", "main", "footer", "fonts", "mediaQueries";
 
 
 body    {
